--- a/introduction.tex
+++ b/introduction.tex
@@ -5,7 +5,7 @@ Many new and old number systems have been introduced as a better alternative to 
 
 \subsection{Examples of Number Systems Used in Deeplearning}
 
-An example of novel number systems is the Posit number system \cite{Gustafson2017}, which is known also as UNUM III. Posit was introduced as an advanced number system that overpasses IEEE standards as a hardware-friendly system for general-purpose computational arithmetic operations. It also provides some faster versions of functions used in neural networks such as the Sigmoid function\footnote{Sigmoid function $\left(\sigma(x) = \frac{1}{1 + e^{-1}}\right)$ is rarely used as an activation function nowadays. However, $\tanh$ function is widely used and it is a scaled and shifted version of the Sigmoid function $\left(\tanh(x) = 2 \sigma(2x) -1\right)$.}.
+An example of novel number systems is the Posit number system \cite{Gustafson2017}, which is known also as UNUM III. Posit was introduced as an advanced number system that overpasses IEEE standards as a hardware-friendly system for general-purpose computational arithmetic operations. It also provides some faster versions of functions used in neural networks such as the Sigmoid function\footnote{Sigmoid function $\left(\sigma(x) = \frac{1}{1 + e^{-1}}\right)$ is not typically used as an activation function nowadays, but $\tanh$ function is widely used and it is a scaled and shifted version of the Sigmoid function $\left(\tanh(x) = 2 \sigma(2x) -1\right)$.}.
 
 Some suggest to use some previously known number systems that can be modified to perform much faster computation than the conventional IEEE-754. Residual Number System (RNS) \cite{Garner1959} has been being used in many DSP applications \cite{Cardarilli2007,Chaves2003,Claudio1995,DiClaudio1990,Jullien1987} and other extensive computational applications like asymmetric cryptography \cite{Hizzani2019,Asif2018a,Schinianakis2014,Antao2014}. RNS was used as a potential number system to provide energy-saving units in Convolution Neural Networks (CNN) \cite{Samimi2020}.
 
@@ -26,10 +26,10 @@ julia> aF, bF = 1.0, 2.0; #there are Floats
 julia> aInt + bF #this will call the method +(::Integer, ::Float64) note the result is in Float64
 3.0
 \end{minted}
-\caption{Multiple Dispatch First Example}
+\caption{Multiple Dispatch Example}
 \end{listing}
 
-Note how the result was promoted to be in \mintinline{julia}{Float64} because of Julia special promotion functions (\mintinline[fontsize=\footnotesize ]{julia}{promote_type(::Type{Integer},::Type{Float64}) = Float64}). This means that functions used in any package can be used without making any modification to the package, it is only required to define methods of those functions for the new type. For instance, functions such as Trigonometric functions or Hyperbolic functions as by default provided by Julia for its primitive types including the IEEE-754 types. If any of these are used in a package simply define any of them for the new number system that is to be used in this package, for further details see subsection~\ref{subsec:saa}.
+Note how the result was promoted to be in \mintinline{julia}{Float64} because of Julia special promotion functions (\mintinline[fontsize=\footnotesize ]{julia}{promote_type(::Type{Integer},::Type{Float64}) = Float64}). This means that functions used in any package can be used without making any modification to the package, it is only required to define methods of those functions for the new type. For instance, functions such as Trigonometric functions or Hyperbolic functions as by default provided by Julia for its primitive types including the IEEE-754 types. If any of these are used in a package simply define any of them for the new number system that is to be used in this package, further details subsection~\ref{subsec:saa}.
 
 \textbf{Divide and conquer} is an essential approach of development, which facilitates the focus on smaller pieces of a development process by dividing a system into layers, this way each layer is being studied and improved. Hence, this property of Julia (Multiple Dispatch) makes it much easier to separate different steps of development by developing a package and then integration with it will be separated of the source code. This means that less time is used on editing and modifying, and more time is used for designing, testing and developing. In the upcoming sections it will be presented what methods of functions of NumNN.jl with which any new number system should be defined beforehand.
 
