--- a/main.tex
+++ b/main.tex
@@ -23,7 +23,7 @@
 \usepackage[dvipsnames]{xcolor}
 \definecolor{LGray}{gray}{0.98}
 \definecolor{dgray}{gray}{0.3}
-
+\usepackage{scrextend}
 \usepackage{hyperref}
 \hypersetup{
 	colorlinks=true,
