--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 %\documentclass[onecolumn]{IEEEtran}
 \documentclass{article}
-\usepackage[nonatbib,preprint]{neurips_2020}
+\usepackage[nonatbib]{neurips_2020}
 %\usepackage{natbib}
 \usepackage[utf8]{inputenc}
 
