--- a/main.bib
+++ b/main.bib
@@ -1,10 +1,24 @@
+@article{Sousa2016,
+abstract = {Cryptography plays a major role assuring security in computation and communication. In particular, public-key cryptography enables the asymmetrical ciphering of data along with the authentication of the parties that are attempting to share data. The computation of asymmetrical encryption is costly, thus it has motivated extensive research to efficiently accelerate the execution of the most relevant algorithms and improve resistance against Side-Channel Attacks (SCAs), which leverage exposed features by the cryptographic systems, such as power consumption and execution timings, to gain access to private information. Herein, we present a state-of-the-art overview of the use of the Residue Number System (RNS) to exploit parallelism in the computation of the most important public-key algorithms. We also address how it can be exploited to prevent side-channel attacks. The experimental results presented in the literature show that not only the currently used RSA and Elliptic Curve Cryptographic (ECC) algorithms but also emerging postquantum algorithms, namely the ones supporting Lattice-based Cryptosystems (LBCs), can take advantage of the RNS. It enables the design of more efficient cryptographic systems and also reinforces the prevention of side-channel attacks, improving their security. Finally, we also present the characteristics of the Computing with the Residue Number System Framework (CRNS), which aims to automatize the design of fully functional cryptographic accelerators based on RNS.},
+author = {Sousa, Leonel and Ant{\~{a}}o, Samuel and Martins, Paulo},
+doi = {10.1109/MCAS.2016.2614714},
+issn = {1531-636X},
+journal = {IEEE Circuits and Systems Magazine},
+month = {oct},
+number = {4},
+pages = {6--32},
+publisher = {Institute of Electrical and Electronics Engineers Inc.},
+title = {{Combining Residue Arithmetic to Design Efficient Cryptographic Circuits and Systems}},
+volume = {16},
+year = {2016}
+}
 @article{Xiao2017,
 abstract = {We present Fashion-MNIST, a new dataset comprising of 28x28 grayscale images of 70,000 fashion products from 10 categories, with 7,000 images per category. The training set has 60,000 images and the test set has 10,000 images. Fashion-MNIST is intended to serve as a direct drop-in replacement for the original MNIST dataset for benchmarking machine learning algorithms, as it shares the same image size, data format and the structure of training and testing splits. The dataset is freely available at https://github.com/zalandoresearch/fashion-mnist},
 archivePrefix = {arXiv},
 arxivId = {1708.07747},
 author = {Xiao, Han and Rasul, Kashif and Vollgraf, Roland},
 eprint = {1708.07747},
-file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Xiao, Rasul, Vollgraf - 2017 - Fashion-MNIST a Novel Image Dataset for Benchmarking Machine Learning Algorithms.pdf:pdf},
+file = {:C$\backslash$:/Users/mohhi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Xiao, Rasul, Vollgraf - 2017 - Fashion-MNIST a Novel Image Dataset for Benchmarking Machine Learning Algorithms.pdf:pdf},
 month = {aug},
 title = {{Fashion-MNIST: a Novel Image Dataset for Benchmarking Machine Learning Algorithms}},
 url = {https://arxiv.org/abs/1708.07747},
@@ -41,7 +55,7 @@ year = {2016}
 @inproceedings{PyTorch2019,
 author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
 booktitle = {Advances in Neural Information Processing Systems 32},
-editor = {Wallach, H and Larochelle, H and Beygelzimer, A and d\textquotesingle Alch{\'{e}}-Buc, F and Fox, E and Garnett, R},
+editor = {Wallach, H and Larochelle, H and Beygelzimer, A and d$\backslash$textquotesingle Alch{\'{e}}-Buc, F and Fox, E and Garnett, R},
 pages = {8024--8035},
 publisher = {Curran Associates, Inc.},
 title = {{PyTorch: An Imperative Style, High-Performance Deep Learning Library}},
@@ -50,7 +64,7 @@ year = {2019}
 @techreport{Paszke2017,
 abstract = {In this article, we describe an automatic differentiation module of PyTorch-a library designed to enable rapid research on machine learning models. It builds upon a few projects, most notably Lua Torch, Chainer, and HIPS Autograd [4], and provides a high performance environment with easy access to automatic differentiation of models executed on different devices (CPU and GPU). To make prototyping easier, PyTorch does not follow the symbolic approach used in many other deep learning frameworks, but focuses on differentiation of purely imperative programs, with a focus on extensibility and low overhead. Note that this preprint is a draft of certain sections from an upcoming paper covering all PyTorch features.},
 author = {Paszke, Adam and Gross, Sam and Chintala, Soumith and Chanan, Gregory and Yang, Edward and Facebook, Zachary Devito and Research, A I and Lin, Zeming and Desmaison, Alban and Antiga, Luca and Srl, Orobix and Lerer, Adam},
-file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Paszke et al. - 2017 - Automatic differentiation in PyTorch.pdf:pdf},
+file = {:C$\backslash$:/Users/mohhi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Paszke et al. - 2017 - Automatic differentiation in PyTorch.pdf:pdf},
 month = {oct},
 title = {{Automatic differentiation in PyTorch}},
 year = {2017}
@@ -63,7 +77,7 @@ author = {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Serge
 booktitle = {MM 2014 - Proceedings of the 2014 ACM Conference on Multimedia},
 doi = {10.1145/2647868.2654889},
 eprint = {1408.5093},
-file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Jia et al. - 2014 - Caffe Convolutional architecture for fast feature embedding.pdf:pdf},
+file = {:C$\backslash$:/Users/mohhi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Jia et al. - 2014 - Caffe Convolutional architecture for fast feature embedding.pdf:pdf},
 isbn = {9781450330633},
 keywords = {Computer vision,Machine learning,Neural networks,Open source,Parallel computation},
 month = {nov},
@@ -101,13 +115,13 @@ archivePrefix = {arXiv},
 arxivId = {1603.04467},
 author = {Abadi, Mart{\'{i}}n and Agarwal, Ashish and Barham, Paul and Brevdo, Eugene and Chen, Zhifeng and Citro, Craig and Corrado, Greg S. and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Goodfellow, Ian and Harp, Andrew and Irving, Geoffrey and Isard, Michael and Jia, Yangqing and Jozefowicz, Rafal and Kaiser, Lukasz and Kudlur, Manjunath and Levenberg, Josh and Mane, Dan and Monga, Rajat and Moore, Sherry and Murray, Derek and Olah, Chris and Schuster, Mike and Shlens, Jonathon and Steiner, Benoit and Sutskever, Ilya and Talwar, Kunal and Tucker, Paul and Vanhoucke, Vincent and Vasudevan, Vijay and Viegas, Fernanda and Vinyals, Oriol and Warden, Pete and Wattenberg, Martin and Wicke, Martin and Yu, Yuan and Zheng, Xiaoqiang},
 eprint = {1603.04467},
-file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Abadi et al. - 2016 - TensorFlow Large-Scale Machine Learning on Heterogeneous Distributed Systems.pdf:pdf},
+file = {:C$\backslash$:/Users/mohhi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Abadi et al. - 2016 - TensorFlow Large-Scale Machine Learning on Heterogeneous Distributed Systems.pdf:pdf},
 month = {mar},
 title = {{TensorFlow: Large-Scale Machine Learning on Heterogeneous Distributed Systems}},
 year = {2016}
 }
 @inproceedings{Juang2019,
-abstract = {In this paper, we have proposed area-delay product (ADP) efficient design for convolutional neural network (CNN) circuits using logarithmic number systems (LNS). By employing LNS-based schemes, the area overhead for large amount of conventional multipliers required in CNN circuits can be tremendously reduced. Simulation results show that our proposed design can achieve lower-error with almost 60% ADP savings compared with the conventional multipliers-based design, which is suitable for deep learning applications.},
+abstract = {In this paper, we have proposed area-delay product (ADP) efficient design for convolutional neural network (CNN) circuits using logarithmic number systems (LNS). By employing LNS-based schemes, the area overhead for large amount of conventional multipliers required in CNN circuits can be tremendously reduced. Simulation results show that our proposed design can achieve lower-error with almost 60{\%} ADP savings compared with the conventional multipliers-based design, which is suitable for deep learning applications.},
 address = {Daegu},
 author = {Juang, Tso Bing and Lin, Cong Yi and Lin, Guan Zhong},
 booktitle = {2018 International SoC Design Conference (ISOCC)},
@@ -130,7 +144,7 @@ title = {{The use of the multi-dimensional logarithmic number system in DSP appl
 year = {2001}
 }
 @article{Lewis1995,
-abstract = {An arithmetic core for DSP applications, comprising two multiplier/dividers and an adder/subtractor, using logarithmic number system (LNS) arithmetic, is described. For most operands, precision better than the worst-case precision of IEEE-754 is obtained. Three operations per cycle are performed using 69k transistors integrated in a 16 mm2 core in 1.2 µm CMOS, offering better performance than the best previous result in only 43% of the area. The use of a new interleaved memory ROM structure and a second-order function interpolator are the key techniques that result in reduced area. This modest area allows several core units to be integrated on a chip for high performance DSP applications. {\textcopyright} 1995 IEEE},
+abstract = {An arithmetic core for DSP applications, comprising two multiplier/dividers and an adder/subtractor, using logarithmic number system (LNS) arithmetic, is described. For most operands, precision better than the worst-case precision of IEEE-754 is obtained. Three operations per cycle are performed using 69k transistors integrated in a 16 mm2 core in 1.2 µm CMOS, offering better performance than the best previous result in only 43{\%} of the area. The use of a new interleaved memory ROM structure and a second-order function interpolator are the key techniques that result in reduced area. This modest area allows several core units to be integrated on a chip for high performance DSP applications. {\textcopyright} 1995 IEEE},
 author = {Lewis, David M.},
 doi = {10.1109/4.482205},
 issn = {1558-173X},
@@ -162,7 +176,7 @@ volume = {3},
 year = {1990}
 }
 @inproceedings{Chaves2003,
-abstract = {This paper is focused on low power programmable fast digital signal processors (DSP) design based on a configurable 5-stage RISC core architecture and on residue number systems (RNS). Several innovative aspects are introduced at the control and datapath architecture levels, which support both the binary system and the RNS. A new moduli set {2n-1, 22n, 2n+1} is also proposed for balancing the processing time in the different RNS channels. Experimental results, obtained trough RDSP implementation on FPGA and ASIC, show that not only a significant reduction in circuit area and power consumption but also a speedup may be achieved with RNS when compared with a binary DSP.},
+abstract = {This paper is focused on low power programmable fast digital signal processors (DSP) design based on a configurable 5-stage RISC core architecture and on residue number systems (RNS). Several innovative aspects are introduced at the control and datapath architecture levels, which support both the binary system and the RNS. A new moduli set {\{}2n-1, 22n, 2n+1{\}} is also proposed for balancing the processing time in the different RNS channels. Experimental results, obtained trough RDSP implementation on FPGA and ASIC, show that not only a significant reduction in circuit area and power consumption but also a speedup may be achieved with RNS when compared with a binary DSP.},
 author = {Chaves, R. and Sousa, L.},
 booktitle = {Proceedings - Euromicro Symposium on Digital System Design, DSD 2003},
 doi = {10.1109/DSD.2003.1231911},
@@ -184,6 +198,18 @@ publisher = {IEEE Computer Society},
 title = {{Residue number system for low-power DSP applications}},
 year = {2007}
 }
+@article{Jullien1987,
+abstract = {In current high-speed digital signal-processing (DSP) architectures, the Residue Number System (RNS) has an important role to play. RNS implementations have a highly modular structure, and are not dependent upon large binary arithmetic elements. RNS implementations become more attractive when combined with the advantages offered by VLSI fabrication technology. In this paper, a novel design methodology has been developed for RNS structures, based on using look-up tables, which takes into consideration the unique features and requirements of RNS. The paper discusses the following three phases: 1) developing a look-up table layout model, which is used to derive relationships between the size of each modulus and both chip area and time; this model supports all types of moduli; 2) selecting the most efficient layout according to the design requirements; the procedure allows the designer to control the area, time, or the configuration of the memory module required for implementing a modulo look-up table; 3) proposing a set of multi-look-up table modules; to be used as building block units for implementing digital signal-processing architectures. The paper uses two examples to illustrate the use of the modules in phase 3). {\textcopyright} 1987 IEEE},
+author = {Jullien, Graham A. and Miller, William C.},
+doi = {10.1109/TCS.1987.1086188},
+issn = {0098-4094},
+journal = {IEEE Transactions on Circuits and Systems},
+number = {6},
+pages = {604--616},
+title = {{A Look-Up Table VLSI Design Methodology for RNS Structures Used in DSP Applications}},
+volume = {34},
+year = {1987}
+}
 @article{Claudio1995,
 abstract = {It is known that RNS VLSI processors can parallelize fixed-point addition and multiplication operations by the use of the Chinese Remainder Theorem (CRT). The required modular operations, however, must use specialized hardware whose design and implementation can create several problems. In this paper a modified residue arithmetic, called pseudo-RNS is introduced in order to alleviate some of the RNS problems when Digital Signal Processing (DSP) structures are implemented. Pseudo-RNS requires only the use of modified binary processors and exhibits a speed performance comparable with other RNS traditional approaches. Some applications of the pseudo-RNS to common DSP architectures, such as multipliers and filters, are also presented in this paper. They are compared in terms of the Area-Time Square product versus other RNS and weighted binary structures. It is proven that existing combinatorial or look-up table approaches for RNS are tailored to small designs or special applications, while the pseudo-RNS approach remains competitive also for complex systems. {\textcopyright} 1995 IEEE},
 author = {Claudio, Elio D.Di and Piazza, Francesco and Orlandi, Gianni},
@@ -197,9 +223,26 @@ title = {{Fast Combinatorial RNS Processors for DSP Applications}},
 volume = {44},
 year = {1995}
 }
+@inproceedings{Szegedy2016,
+abstract = {Convolutional networks are at the core of most state of-the-art computer vision solutions for a wide variety of tasks. Since 2014 very deep convolutional networks started to become mainstream, yielding substantial gains in various benchmarks. Although increased model size and computational cost tend to translate to immediate quality gains for most tasks (as long as enough labeled data is provided for training), computational efficiency and low parameter count are still enabling factors for various use cases such as mobile vision and big-data scenarios. Here we are exploring ways to scale up networks in ways that aim at utilizing the added computation as efficiently as possible by suitably factorized convolutions and aggressive regularization. We benchmark our methods on the ILSVRC 2012 classification challenge validation set demonstrate substantial gains over the state of the art: 21:2{\%} top-1 and 5:6{\%} top-5 error for single frame evaluation using a network with a computational cost of 5 billion multiply-adds per inference and with using less than 25 million parameters. With an ensemble of 4 models and multi-crop evaluation, we report 3:5{\%} top-5 error and 17:3{\%} top-1 error on the validation set and 3:6{\%} top-5 error on the official test set.},
+archivePrefix = {arXiv},
+arxivId = {1512.00567},
+author = {Szegedy, Christian and Vanhoucke, Vincent and Ioffe, Sergey and Shlens, Jon and Wojna, Zbigniew},
+booktitle = {IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
+doi = {10.1109/CVPR.2016.308},
+eprint = {1512.00567},
+file = {:C$\backslash$:/Users/mohhi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Szegedy et al. - 2016 - Rethinking the Inception Architecture for Computer Vision.pdf:pdf},
+isbn = {9781467388504},
+issn = {10636919},
+pages = {2818--2826},
+publisher = {IEEE Computer Society},
+title = {{Rethinking the Inception Architecture for Computer Vision}},
+volume = {2016-Decem},
+year = {2016}
+}
 @misc{JuliaMehtods,
 title = {{Julia Methods}},
-url = {https://docs.julialang.org/en/v1/manual/methods/#Defining-Methods-1}
+url = {https://docs.julialang.org/en/v1/manual/methods/{\#}Defining-Methods-1}
 }
 @misc{Keras,
 title = {{Home - Keras Documentation}},
@@ -208,7 +251,7 @@ urldate = {2020-04-21}
 }
 @misc{WikiMultipleDispatch,
 title = {{Multiple dispatch - Wikipedia}},
-url = {https://en.wikipedia.org/wiki/Multiple_dispatch},
+url = {https://en.wikipedia.org/wiki/Multiple{\_}dispatch},
 urldate = {2020-04-19}
 }
 @article{Bezanson2017,
@@ -273,20 +316,8 @@ title = {{Digital filtering using logarithmic arithmetic}},
 volume = {7},
 year = {1971}
 }
-@article{Jullien1987,
-abstract = {In current high-speed digital signal-processing (DSP) architectures, the Residue Number System (RNS) has an important role to play. RNS implementations have a highly modular structure, and are not dependent upon large binary arithmetic elements. RNS implementations become more attractive when combined with the advantages offered by VLSI fabrication technology. In this paper, a novel design methodology has been developed for RNS structures, based on using look-up tables, which takes into consideration the unique features and requirements of RNS. The paper discusses the following three phases: 1) developing a look-up table layout model, which is used to derive relationships between the size of each modulus and both chip area and time; this model supports all types of moduli; 2) selecting the most efficient layout according to the design requirements; the procedure allows the designer to control the area, time, or the configuration of the memory module required for implementing a modulo look-up table; 3) proposing a set of multi-look-up table modules; to be used as building block units for implementing digital signal-processing architectures. The paper uses two examples to illustrate the use of the modules in phase 3). {\textcopyright} 1987 IEEE},
-author = {Jullien, Graham A. and Miller, William C.},
-doi = {10.1109/TCS.1987.1086188},
-issn = {0098-4094},
-journal = {IEEE Transactions on Circuits and Systems},
-number = {6},
-pages = {604--616},
-title = {{A Look-Up Table VLSI Design Methodology for RNS Structures Used in DSP Applications}},
-volume = {34},
-year = {1987}
-}
 @article{Samimi2020,
-abstract = {In this article, a technique, based on using Residue Number System (RNS) is suggested to improve the energy efficiency of Deep Neural Networks (DNNs). In the DNN architecture, which is fully RNS-based, only weights and the primary inputs in the main memory are in the binary number system (BNS). The architecture, which is called Res-DNN, offers a high energy saving while requiring higher bit count for data to handle the overflow compared to that of a BNS one. Scaling techniques in the processing elements are employed in the RNS-based computations to make the computation bit widths the same as the BNS bit width. In this architecture, the MAX pooling and ReLU activation function are implemented in the RNS format. To lower the memory usage and required memory bandwidth, we suggest a Huffman-based coding. Additionally, for accessing the weights stored in the main memory, to obtain further energy reduction, we propose a structural modification to the memory hierarchy where a lower level register file is added to the data path of these accesses. The effectiveness of the proposed architecture is evaluated under seven state-of-the-art DNNs with the datasets of ImageNet and CIFAR-10. The obtained results show that Res-DNN leads to 2.5 × lower energy for computations and an average of 30% overall energy reduction compared to those of the binary counterpart.},
+abstract = {In this article, a technique, based on using Residue Number System (RNS) is suggested to improve the energy efficiency of Deep Neural Networks (DNNs). In the DNN architecture, which is fully RNS-based, only weights and the primary inputs in the main memory are in the binary number system (BNS). The architecture, which is called Res-DNN, offers a high energy saving while requiring higher bit count for data to handle the overflow compared to that of a BNS one. Scaling techniques in the processing elements are employed in the RNS-based computations to make the computation bit widths the same as the BNS bit width. In this architecture, the MAX pooling and ReLU activation function are implemented in the RNS format. To lower the memory usage and required memory bandwidth, we suggest a Huffman-based coding. Additionally, for accessing the weights stored in the main memory, to obtain further energy reduction, we propose a structural modification to the memory hierarchy where a lower level register file is added to the data path of these accesses. The effectiveness of the proposed architecture is evaluated under seven state-of-the-art DNNs with the datasets of ImageNet and CIFAR-10. The obtained results show that Res-DNN leads to 2.5 × lower energy for computations and an average of 30{\%} overall energy reduction compared to those of the binary counterpart.},
 author = {Samimi, Nasim and Kamal, Mehdi and Afzali-Kusha, Ali and Pedram, Massoud},
 doi = {10.1109/TCSI.2019.2951083},
 issn = {1558-0806},
@@ -299,11 +330,23 @@ title = {{Res-DNN: A residue number system-based DNN accelerator unit}},
 volume = {67},
 year = {2020}
 }
+@article{Miyashita2016,
+abstract = {Recent advances in convolutional neural networks have considered model complexity and hardware efficiency to enable deployment onto embedded systems and mobile devices. For example, it is now well-known that the arithmetic operations of deep networks can be encoded down to 8-bit fixed-point without significant deterioration in performance. However, further reduction in precision down to as low as 3-bit fixed-point results in significant losses in performance. In this paper we propose a new data representation that enables state-of-the-art networks to be encoded to 3 bits with negligible loss in classification performance. To perform this, we take advantage of the fact that the weights and activations in a trained network naturally have non-uniform distributions. Using non-uniform, base-2 logarithmic representation to encode weights, communicate activations, and perform dot-products enables networks to 1) achieve higher classification accuracies than fixed-point at the same resolution and 2) eliminate bulky digital multipliers. Finally, we propose an end-to-end training procedure that uses log representation at 5-bits, which achieves higher final test accuracy than linear at 5-bits.},
+archivePrefix = {arXiv},
+arxivId = {1603.01025},
+author = {Miyashita, Daisuke and Lee, Edward H. and Murmann, Boris},
+eprint = {1603.01025},
+file = {:C$\backslash$:/Users/mohhi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Miyashita, Lee, Murmann - 2016 - Convolutional Neural Networks using Logarithmic Data Representation.pdf:pdf},
+month = {mar},
+title = {{Convolutional Neural Networks using Logarithmic Data Representation}},
+url = {http://arxiv.org/abs/1603.01025},
+year = {2016}
+}
 @article{Gustafson2017,
 abstract = {A new data type called a posit is designed as a direct drop-in replacement for IEEE Standard 754 floating-point numbers (floats). Unlike earlier forms of universal number (unum) arithmetic, posits do not require interval arithmetic or variable size operands; like floats, they round if an answer is inexact. However, they provide compelling advantages over floats, including larger dynamic range, higher accuracy, better closure, bitwise identical results across systems, simpler hardware, and simpler exception handling. Posits never overflow to infinity or underflow to zero, and "Nota- Number" (NaN) indicates an action instead of a bit pattern. A posit processing unit takes less circuitry than an IEEE float FPU. With lower power use and smaller silicon footprint, the posit operations per second (POPS) supported by a chip can be significantly higher than the FLOPS using similar hardware resources. GPU accelerators and Deep Learning processors, in particular, can do more per watt and per dollar with posits, yet deliver superior answer quality. A comprehensive series of benchmarks compares floats and posits for decimals of accuracy produced for a set precision. Low precision posits provide a better solution than "approximate computing" methods that try to tolerate decreased answer quality. High precision posits provide more correct decimals than floats of the same size; in some cases, a 32-bit posit may safely replace a 64-bit float. In other words, posits beat floats at their own game.},
 author = {Gustafson, John L. and Yonemoto, Isaac},
 doi = {10.14529/jsfi170206},
-file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Gustafson, Yonemoto - 2017 - Beating floating point at its own game Posit arithmetic.pdf:pdf},
+file = {:C$\backslash$:/Users/mohhi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Gustafson, Yonemoto - 2017 - Beating floating point at its own game Posit arithmetic.pdf:pdf},
 issn = {2313-8734},
 journal = {Supercomputing Frontiers and Innovations},
 keywords = {Computer arithmetic,Energy-efficient computing,Floating point,LINPACK,Linear algebra,Neural networks,Posits,Unum computing,Valid arithmetic},
@@ -326,7 +369,7 @@ year = {2019}
 abstract = {A design methodology for incorporating Residue Number System (RNS) and Polynomial Residue Number System (PRNS) in Montgomery modular multiplication in GF(p) or GF(2n) respectively, as well as a VLSI architecture of a dual-field residue arithmetic Montgomery multiplier are presented in this paper. An analysis of input/output conversions to/from residue representation, along with the proposed residue Montgomery multiplication algorithm, reveals common multiply-accumulate data paths both between the converters and between the two residue representations. A versatile architecture is derived that supports all operations of Montgomery multiplication in GF(p) and GF(2n), input/output conversions, Mixed Radix Conversion (MRC) for integers and polynomials, dual-field modular exponentiation and inversion in the same hardware. Detailed comparisons with state-of-the-art implementations prove the potential of residue arithmetic exploitation in dual-field modular multiplication.},
 author = {Schinianakis, Dimitrios and Stouraitis, Thanos},
 doi = {10.1109/TCSI.2013.2283674},
-file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Schinianakis, Stouraitis - 2014 - Multifunction Residue Architectures for Cryptography.pdf:pdf},
+file = {:C$\backslash$:/Users/mohhi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Schinianakis, Stouraitis - 2014 - Multifunction Residue Architectures for Cryptography.pdf:pdf},
 journal = {IEEE Transactions on Circuits and Systems I: Regular Papers},
 number = {4},
 pages = {1156--1169},
@@ -346,34 +389,11 @@ title = {{A Fully RNS based ECC Processor}},
 volume = {61},
 year = {2018}
 }
-@inproceedings{Garner1959,
-address = {New York, New York, USA},
-author = {Garner, Harvey L.},
-booktitle = {Papers presented at the the March 3-5, 1959, western joint computer conference on XX - IRE-AIEE-ACM '59 (Western)},
-doi = {10.1145/1457838.1457864},
-file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Garner - 1959 - The residue number system.pdf:pdf},
-pages = {146--153},
-publisher = {ACM Press},
-title = {{The residue number system}},
-year = {1959}
-}
-@article{Miyashita2016,
-abstract = {Recent advances in convolutional neural networks have considered model complexity and hardware efficiency to enable deployment onto embedded systems and mobile devices. For example, it is now well-known that the arithmetic operations of deep networks can be encoded down to 8-bit fixed-point without significant deterioration in performance. However, further reduction in precision down to as low as 3-bit fixed-point results in significant losses in performance. In this paper we propose a new data representation that enables state-of-the-art networks to be encoded to 3 bits with negligible loss in classification performance. To perform this, we take advantage of the fact that the weights and activations in a trained network naturally have non-uniform distributions. Using non-uniform, base-2 logarithmic representation to encode weights, communicate activations, and perform dot-products enables networks to 1) achieve higher classification accuracies than fixed-point at the same resolution and 2) eliminate bulky digital multipliers. Finally, we propose an end-to-end training procedure that uses log representation at 5-bits, which achieves higher final test accuracy than linear at 5-bits.},
-archivePrefix = {arXiv},
-arxivId = {1603.01025},
-author = {Miyashita, Daisuke and Lee, Edward H. and Murmann, Boris},
-eprint = {1603.01025},
-file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Miyashita, Lee, Murmann - 2016 - Convolutional Neural Networks using Logarithmic Data Representation.pdf:pdf},
-month = {mar},
-title = {{Convolutional Neural Networks using Logarithmic Data Representation}},
-url = {http://arxiv.org/abs/1603.01025},
-year = {2016}
-}
 @article{Antao2014,
 abstract = {Modular arithmetic is a building block for a variety of applications potentially supported on embedded systems. An approach to turn modular arithmetic more efficient is to identify algorithmic modifications that would enhance the parallelization of the target arithmetic in order to exploit the properties of parallel devices and platforms. The Residue Number System (RNS) introduces data-level parallelism, enabling the parallelization even for algorithms based on modular arithmetic with several data dependencies. However, the mapping of generic algorithms to full RNS-based implementations can be complex and the utilization of suitable hardware architectures that are scalable and adaptable to different demands is required. This paper proposes and discusses an architecture with scalability features for the parallel implementation of algorithms relying on modular arithmetic fully supported by the Residue Number System (RNS). The systematic mapping of a generic modular arithmetic algorithm to the architecture is presented. It can be applied as a high level synthesis step for an Application Specific Integrated Circuit (ASIC) or Field Programmable Gate Array (FPGA) design flow targeting modular arithmetic algorithms. An implementation with the Xilinx Virtex 4 and Altera Stratix II Field Programmable Gate Array (FPGA) technologies of the modular exponentiation and Elliptic Curve (EC) point multiplication, used in the Rivest-Shamir-Adleman (RSA) and (EC) cryptographic algorithms, suggests latency results in the same order of magnitude of the fastest hardware implementations of these operations known to date.},
 author = {Ant{\~{a}}o, Samuel and Sousa, Leonel},
 doi = {10.1007/s11265-014-0879-y},
-file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Ant{\~{a}}o, Sousa - 2014 - A Flexible Architecture for Modular Arithmetic Hardware Accelerators based on RNS.pdf:pdf},
+file = {:C$\backslash$:/Users/mohhi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Ant{\~{a}}o, Sousa - 2014 - A Flexible Architecture for Modular Arithmetic Hardware Accelerators based on RNS.pdf:pdf},
 issn = {19398115},
 journal = {Journal of Signal Processing Systems},
 keywords = {Cryptography,Electronic design automation (EDA),Embedded systems,Modular arithmetic,Residue number system (RNS)},
@@ -383,20 +403,14 @@ title = {{A Flexible Architecture for Modular Arithmetic Hardware Accelerators b
 volume = {76},
 year = {2014}
 }
-@inproceedings{Szegedy2016,
-abstract = {Convolutional networks are at the core of most state of-the-art computer vision solutions for a wide variety of tasks. Since 2014 very deep convolutional networks started to become mainstream, yielding substantial gains in various benchmarks. Although increased model size and computational cost tend to translate to immediate quality gains for most tasks (as long as enough labeled data is provided for training), computational efficiency and low parameter count are still enabling factors for various use cases such as mobile vision and big-data scenarios. Here we are exploring ways to scale up networks in ways that aim at utilizing the added computation as efficiently as possible by suitably factorized convolutions and aggressive regularization. We benchmark our methods on the ILSVRC 2012 classification challenge validation set demonstrate substantial gains over the state of the art: 21:2% top-1 and 5:6% top-5 error for single frame evaluation using a network with a computational cost of 5 billion multiply-adds per inference and with using less than 25 million parameters. With an ensemble of 4 models and multi-crop evaluation, we report 3:5% top-5 error and 17:3% top-1 error on the validation set and 3:6% top-5 error on the official test set.},
-archivePrefix = {arXiv},
-arxivId = {1512.00567},
-author = {Szegedy, Christian and Vanhoucke, Vincent and Ioffe, Sergey and Shlens, Jon and Wojna, Zbigniew},
-booktitle = {IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
-doi = {10.1109/CVPR.2016.308},
-eprint = {1512.00567},
-file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Szegedy et al. - 2016 - Rethinking the Inception Architecture for Computer Vision.pdf:pdf},
-isbn = {9781467388504},
-issn = {10636919},
-pages = {2818--2826},
-publisher = {IEEE Computer Society},
-title = {{Rethinking the Inception Architecture for Computer Vision}},
-volume = {2016-Decem},
-year = {2016}
+@inproceedings{Garner1959,
+address = {New York, New York, USA},
+author = {Garner, Harvey L.},
+booktitle = {Papers presented at the the March 3-5, 1959, western joint computer conference on XX - IRE-AIEE-ACM '59 (Western)},
+doi = {10.1145/1457838.1457864},
+file = {:C$\backslash$:/Users/mohhi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Garner - 1959 - The residue number system.pdf:pdf},
+pages = {146--153},
+publisher = {ACM Press},
+title = {{The residue number system}},
+year = {1959}
 }
